// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single paragraph 1`] = `
<Text>
  This is the text for paragraph one
</Text>
`;

exports[`2. multiple paragraphs 1`] = `
<View>
  <Text>
    This is the text for paragraph one
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
</View>
`;

exports[`3. multiple paragraphs with a pull quote 1`] = `
<View>
  <Text>
    This is the text for paragraph one
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <PullQuote
    caption="Katie Glass"
    content="Some pull quote"
  />
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
</View>
`;

exports[`4. bold tag 1`] = `
<Text
  style={
    Object {
      "fontWeight": "bold",
    }
  }
>
  some text here
</Text>
`;

exports[`5. italic tag 1`] = `
<Text
  style={
    Object {
      "fontStyle": "italic",
    }
  }
>
   some more text here
</Text>
`;

exports[`6. span tag 1`] = `
<Text>
  some other text here
</Text>
`;

exports[`7. line break tag 1`] = `
<Text>
  

</Text>
`;

exports[`8. mixture of tags 1`] = `
<View>
  <View>
    <Text>
      some link here
    </Text>
  </View>
  <View>
    <Text
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      some text here
    </Text>
  </View>
  <View>
    <Text
      style={
        Object {
          "fontStyle": "italic",
        }
      }
    >
       some more text here
    </Text>
  </View>
  <View>
    <Text>
      some other text here
    </Text>
  </View>
</View>
`;

exports[`9. nested tags 1`] = `
<Text>
  Some text is here 
  <Text>
    and there is some 
    <Text>
      more text 
      <Text>
        and in here
      </Text>
    </Text>
     after it too
  </Text>
   and here
</Text>
`;

exports[`10. wrapped tags 1`] = `
<Text>
  Camilla Long is 
  <Text
    style={
      Object {
        "fontStyle": "italic",
      }
    }
  >
    the Sunday Times
  </Text>
   film critic. She also writes interviews and a column, and was named 
  <Text
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    interviewer of the year
  </Text>
   at the British Press Awards in 2010 and 2016.
</Text>
`;

exports[`11. multiple children 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph one
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
</Text>
`;

exports[`12. does not render a script tag 1`] = `<View />`;

exports[`13. image tag 1`] = `<View />`;
